# dejaship

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  rulesync.jsonc
backend/: Dockerfile  entrypoint.sh  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 696749d275f6_initial_schema.py  a1b2c3d4e5f6_add_search_tsvector_column_and_gin_index.py  c0af39cade6a_add_mechanic_embedding.py
backend/scripts/: abandon_stale.py
backend/src/dejaship/: access_log.py  config.py  db.py  embeddings.py  filters.py  fts.py  keyword_utils.py  limiter.py  main.py  models.py  reranker.py  schemas.py  services.py
backend/src/dejaship/api/: check.py  claim.py  stats.py  update.py
backend/src/dejaship/mcp/: server.py
backend/tests/: conftest.py  test_abandon_stale.py  test_access_logging.py  test_api.py  test_embeddings.py  test_feature_ablation_filters.py  test_feature_flags.py  test_fts.py  test_input_fuzzing.py  test_jaccard_filter.py  test_keyword_normalization.py  test_mcp_protocol.py  test_reranker.py  test_retrieval_analysis_keywords.py  test_sanitization.py  test_two_stage.py
backend/tests/agent_sim/: README.md  conftest.py  test_agent_swarm.py  test_catalog_contracts.py  test_coverage_max_fullstack.py  test_embedding_variants.py  test_fixture_replay.py  test_fixture_store.py  test_keyword_builder.py  test_live_llm_smoke.py  test_llm_provider.py  test_mcp_client_integration.py  test_retrieval_analysis.py  test_simulation_planning.py  test_support_config.py
backend/tests/agent_sim/_support/: agents.py  assertions.py  catalog.py  config.py  db_snapshot.py  embedding_variants.py  fixture_store.py  keyword_builder.py  llm_provider.py  mcp_client.py  prompting.py  reporting.py  retrieval_analysis.py  simulation.py  types.py
backend/tests/agent_sim/fixtures/: app_catalog.yaml  model_matrix.yaml  scenario_matrix.yaml
backend/tests/agent_sim/prompts/: decision_after_check_v1.md  intent_from_brief_v1.md
(+447 files in other folders)
